Wrap input with form and fix input customization

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,7 @@ header {
   input {
     border-radius: 16px;
     border: 1px solid var(--color-light-gray);
+    width: 28.5rem;
   }
 }
 
